Added title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Sydney Technology Leaders
+description: Information about the SydTechLeaders meetup group
+show_downloads: false
